# python-apscheduler-celery

./: .env.example  .gitignore  README.md  pyproject.toml  tox.ini  uv.toml
app/: __init__.py  config.py  main.py
app/api/: deps.py
app/api/routes/: health.py  scheduler.py  tasks.py
app/core/celery/: __init__.py  app.py  idempotent.py  tasks.py
app/core/idempotency/: __init__.py  keys.py  service.py
app/core/scheduler/: __init__.py  distributed_lock.py  service.py
app/db/: base.py  session.py
app/db/models/: __init__.py  idempotency.py  job.py  task_execution.py
app/monitoring/: __init__.py  logging.py  metrics.py
app/schemas/: job.py  task.py
docker/: Dockerfile  docker-compose.dev.yml
docs/: CELERY_GUIDE.md  DOCKER_GUIDE.md  SYSTEM_FLOW.md
migrations/: alembic.ini  env.py
migrations/versions/: .gitkeep
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: .gitkeep
scripts/: setup_dev.sh  start_api.sh  start_scheduler.sh  start_worker.sh
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_idempotency.py
