[project]
name = "idempotent-scheduler"
version = "0.1.0"
description = "Production-grade idempotent task scheduler with APScheduler and Celery"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    # Task Queue & Scheduling
    "celery[redis]>=5.3.6",
    "apscheduler>=3.10.4",
    "kombu>=5.3.4",
    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    # Redis
    "redis>=5.0.1",
    "aioredis>=2.0.1",
    # Configuration & Validation
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    # Monitoring & Logging
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",
    # Utilities
    "httpx>=0.26.0",
    "tenacity>=8.2.3",
    "orjson>=3.9.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.26.0",
    "black>=24.1.0",
    "ruff>=0.1.13",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "tox>=4.12.0",
    "tox-uv>=1.0.0",
]

# Poetry compatibility section
[tool.poetry]
name = "idempotent-scheduler"
version = "0.1.0"
description = "Production-grade idempotent task scheduler with APScheduler and Celery"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.6"
celery = {extras = ["redis"], version = "^5.3.6"}
apscheduler = "^3.10.4"
kombu = "^5.3.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
redis = "^5.0.1"
aioredis = "^2.0.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
prometheus-client = "^0.19.0"
structlog = "^24.1.0"
httpx = "^0.26.0"
tenacity = "^8.2.3"
orjson = "^3.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
aiosqlite = "^0.19.0"
httpx = "^0.26.0"
black = "^24.1.0"
ruff = "^0.1.13"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
tox = "^4.12.0"
tox-uv = "^1.0.0"

# UV configuration
[tool.uv]
dev-dependencies = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "aiosqlite>=0.19.0",
    "black>=24.1.0",
    "ruff>=0.1.13",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "tox>=4.12.0",
    "tox-uv>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
